@startuml

package "Bitcoin Data Model" {

    class blocks {
        + height: int
    }

    class transactions {
        + id: int
        + hash: string
        + index_in_block: int
        + is_duplicate: bool
        ---
        + block: Block
    }

    class outputs {
        + id: int
        + index_in_tx: int
        + value: float
        + valid: bool
        ---
        + transaction: Transaction
        + address: Address
    }

    class inputs {
        + id: int
        + index_in_tx: int
        ---
        + prev_out: Output
        + transaction: Transaction
    }

    class addresses {
        + addr: string
    }

    Transaction "1" -- "many" Output : contains
    Transaction "1" -- "many" Input : contains
    Block "1" -- "many" Transaction : contains
    Output "1" -- "1" Address : Output Address
    Input "1" -- "1" Output : Previous Output

}

@enduml
